<resources>
    <string name="app_name">HomeworkThirdCourse</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="plus">+</string>
    <string name="str_four">4</string>
    <string name="str_five">5</string>
    <string name="str_six">6</string>
    <string name="str_minus">-</string>
    <string name="str_one">1</string>
    <string name="str_two">2</string>
    <string name="str_three">3</string>
    <string name="str_mult">x</string>
    <string name="str_clear">C</string>
    <string name="str_zero">0</string>
    <string name="str_del">÷</string>
    <string name="str_equal">=</string>
</resources>