<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="textEnd"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonLog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="log"
        android:textSize="32sp"
        android:paddingVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonSin"
        app:layout_constraintTop_toBottomOf="@id/swipeLine"/>

    <Button
        android:id="@+id/buttonSin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingVertical="8dp"
        android:background="@android:color/transparent"
        android:text="sin"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@id/buttonLog"
        app:layout_constraintEnd_toStartOf="@id/buttonCos"
        app:layout_constraintTop_toBottomOf="@id/swipeLine"/>

    <Button
        android:id="@+id/buttonCos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingVertical="8dp"
        android:background="@android:color/transparent"
        android:text="cos"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@id/buttonSin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swipeLine"/>

    <View
        android:id="@+id/swipeLine"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        app:layout_constraintTop_toBottomOf="@id/editText1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/ic_swipeLine"
        android:layout_width="32dp"
        android:layout_height="16dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/editText1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/swipeLineDividerTop"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/swipeLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/swipeLineDividerBottom"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/swipeLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/_7"
        android:paddingVertical="8dp"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/swipeLine"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:background="@android:color/transparent"
        android:text="@string/_8"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@id/swipeLine"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:background="@android:color/transparent"
        android:text="@string/_9"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintEnd_toStartOf="@id/buttonAdd"
        app:layout_constraintTop_toBottomOf="@id/swipeLine"/>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingVertical="8dp"
        android:background="@android:color/transparent"
        android:text="@string/plus"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swipeLine"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:background="@android:color/transparent"
        android:text="@string/str_four"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button5"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:background="@android:color/transparent"
        android:text="@string/str_five"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@id/button7" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:background="@android:color/transparent"
        android:text="@string/str_six"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintEnd_toStartOf="@id/buttonMin"
        app:layout_constraintTop_toBottomOf="@id/button7"/>

    <Button
        android:id="@+id/buttonMin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:background="@android:color/transparent"
        android:text="@string/str_minus"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button7"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:background="@android:color/transparent"
        android:text="@string/str_one"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button2"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:background="@android:color/transparent"
        android:text="@string/str_two"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintEnd_toStartOf="@id/button3"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:background="@android:color/transparent"
        android:text="@string/str_three"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintEnd_toStartOf="@id/buttonMultiply"/>

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:background="@android:color/transparent"
        android:text="@string/str_mult"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:background="@android:color/transparent"
        android:text="@string/str_clear"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonZero"/>

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:background="@android:color/transparent"
        android:text="@string/str_zero"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@id/buttonClear"
        app:layout_constraintEnd_toStartOf="@id/buttonDiv"
        app:layout_constraintTop_toBottomOf="@id/button1"/>

    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:background="@android:color/transparent"
        android:text="@string/str_del"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@id/buttonZero"
        app:layout_constraintEnd_toStartOf="@id/buttonEqual"
        app:layout_constraintTop_toBottomOf="@id/button1"/>

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:background="@android:color/transparent"
        android:text="@string/str_equal"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@id/buttonDiv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1"/>
</androidx.constraintlayout.motion.widget.MotionLayout>
